# quadrate.nvim

./: .gitignore  LICENSE  README.md
.builds/: archlinux.yml  debian.yml
ftdetect/: quadrate.vim
ftplugin/: quadrate.vim
indent/: quadrate.vim
plugin/: quadrate.lua
syntax/: quadrate.vim
tree-sitter-quadrate/: .gitignore  Cargo.toml  README.md  binding.gyp  generate_and_test.sh  grammar.js  meson.build  package.json  test_parser.sh  tree-sitter.json
tree-sitter-quadrate/queries/: highlights.scm  indents.scm
tree-sitter-quadrate/test/corpus/: builtins.txt  comments.txt  control_flow.txt  declarations.txt  functions.txt  generics.txt  literals.txt  locals.txt  new_features.txt  structs.txt
